# distributed-lab

./: .gitignore  CMakeLists.txt  README.md  calc.proto  client.cpp  monolithic.cpp  server.cpp
.github/workflows/: build.yml
